--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protractor-api-resource",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This library extends request npm module. It helps write easy protractor tests when test data are objtained from API response.",
   "main": "./bin/index.js",
   "scripts": {
@@ -12,7 +12,12 @@
     "url": "git+https://github.com/sudharsan-selvaraj/protractor-api-resource.git"
   },
   "keywords": [
-    "protractor"
+    "protractor",
+    "api",
+    "e2e",
+    "rest",
+    "Rest",
+    "angular"
   ],
   "author": "Sudharsan Selvaraj",
   "license": "ISC",
