--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protractor-api-resource",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "This library extends request npm module. It helps write easy protractor tests when test data are objtained from API response.",
   "main": "./bin/index.js",
   "scripts": {
@@ -27,7 +27,9 @@
   "homepage": "https://github.com/sudharsan-selvaraj/protractor-api-resource#readme",
   "dependencies": {
     "q": "^1.5.1",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "request" : "2.85.0",
+    "protractor": "^5.3.1"
   },
   "devDependencies": {
     "@types/jasminewd2": "^2.0.3",
@@ -39,7 +41,6 @@
     "gulp-sequence": "^1.0.0",
     "gulp-typescript": "^4.0.2",
     "jasmine": "^3.1.0",
-    "protractor": "^5.3.1",
     "typescript": "^2.8.3"
   }
 }
